--- a/lang/Japanese.txt
+++ b/lang/Japanese.txt
@@ -51,6 +51,7 @@ m01-072|FULLCOMBO:
 m01-073| PERFECT : 
 m02-000|LOADING...
 m02-001|譜面データの始端には小節線(--)を入力する必要があります。
+m02-005|譜面データの読み込み中にエラーが発生しました。
 m02-010|---
 m02-011|指定された譜面ファイルが見つかりません。
 m02-012|このコースをプレイするには、最新バージョンのK-Shoot MANIAが必要です。
