--- a/lang/Korean.txt
+++ b/lang/Korean.txt
@@ -51,6 +51,7 @@ m01-072|FULLCOMBO:
 m01-073| PERFECT : 
 m02-000|LOADING...
 m02-001|채보 데이터의 시작 부분에는 반드시 박자선(--)을 입력해야 합니다.
+m02-005|An error occurred while loading the chart.
 m02-010|---
 m02-011|채보 파일을 찾을 수 없습니다.
 m02-012|현 코스를 플레이하려면 K-Shoot MANIA의 최신 버전이 필요합니다.
