--- a/lang/Traditional Chinese.txt
+++ b/lang/Traditional Chinese.txt
@@ -51,6 +51,7 @@ m01-072|FULLCOMBO:
 m01-073| PERFECT : 
 m02-000|載入中.....
 m02-001|第一小節必須在譜面??始位置之後.
+m02-005|An error occurred while loading the chart.
 m02-010|---
 m02-011|Some charts in this course are missing.
 m02-012|The latest version of K-Shoot MANIA is required to play this course.
