Fix character corruption in "Traditional Chinese.txt"

--- a/lang/Traditional Chinese.txt
+++ b/lang/Traditional Chinese.txt
@@ -3,7 +3,7 @@ m00-001|Microsoft YaHei
 m00-002|Error
 m00-003|bassconv.dll¤å¥ó¥á¥¢.
 m00-004|bass.dll¤å¥ó¥á¥¢.
-m00-005|BASSªì©l¤Æ¥¢±Ñ¡C\n­µ?ñ³]³Æ¥i¯à¨S¦³¥¿±`±µ¤J
+m00-005|BASSªì©l¤Æ¥¢±Ñ¡C\n­µÅT³]³Æ¥i¯à¨S¦³¥¿±`±µ¤J
 m00-010|_en
 m01-000|msel_info.gif
 m01-001|§P©w/Åã¥Ü ³]©w
@@ -50,13 +50,13 @@ m01-071|  CLEAR  :
 m01-072|FULLCOMBO: 
 m01-073| PERFECT : 
 m02-000|¸ü¤J¤¤.....
-m02-001|²Ä¤@¤p¸`¥²¶·¦bÃĞ­±??©l¦ì¸m¤§«á.
+m02-001|²Ä¤@¤p¸`¥²¶·¦bÃĞ­±°_©l¦ì¸m¤§¦Z.
 m02-005|An error occurred while loading the chart.
 m02-010|---
 m02-011|Some charts in this course are missing.
 m02-012|The latest version of K-Shoot MANIA is required to play this course.
 m02-013|Cannot find the chart file.
-m02-050|«O¦s®É¶¡½Õ¾ã«áªºÃĞ­±\n(®É¶¡°¾²¾¶q: 
+m02-050|«O¦s®É¶¡½Õ¾ã¦ZªºÃĞ­±\n(®É¶¡°¾²¾¶q: 
 m02-051|ms)
 m02-052|[  ¬O  ]     §_   
 m02-053|   ¬O     [  §_  ] 
@@ -85,9 +85,9 @@ m03-019|ÁôÂÃNote
 m03-020|«ö¦í«öÁä (Áä½L¥Î)
 m03-021|³s¥´¦¡ (PowerMate¥Î)
 m03-022|¹«¼Ğ X/Y «H¸¹ (¤â¥x¥Î)
-m03-023|·n±ì
+m03-023|·n§ı
 m03-024|ºu½ü«H¸¹ (¤â¥x¥Î)
-m03-025|·n±ì X/Y «H¸¹ (´`Àô)
+m03-025|·n§ı X/Y «H¸¹ (´`Àô)
 m03-028|¶}
 m03-029|Ãö
 m03-030|Ãö
@@ -124,11 +124,11 @@ m03-065|Back :
 m03-066|Auto :
 m03-067|-
 m03-070|      Áä½L 
-m03-071|      ¹CÀ¸±±¨î¾¹ 
+m03-071|      ´åÀ¸±±¨î¾¹ 
 m03-072|      
 m03-090|¡ô/¡õ: ¿ï¾Ü¶µ¥Ø   ¦^¨®: ¿ï¾Ü  ESC: «O¦s¨Ã°h¥X
 m03-091|¡ô/¡õ: ¿ï¾Ü¶µ¥Ø  ¡ö/¡÷: ½s¿è  ESC: ªğ¦^
-m03-092|¡ô/¡õ: ¿ï¾Ü¶µ¥Ø  ¡ö/¡÷: ½s¿è  ESC: ªğ¦^  (*)»İ­n­«±Ò¹CÀ¸
+m03-092|¡ô/¡õ: ¿ï¾Ü¶µ¥Ø  ¡ö/¡÷: ½s¿è  ESC: ªğ¦^  (*)»İ­n­«±Ò´åÀ¸
 m03-093|¤è¦VÁä:¿ï¾Ü  ¦^¨®:½s¿è/¨ú®ø½s¿è«öÁä  ªÅ®æ:²M°£«öÁä  ESC:ªğ¦^
 m04-000|¤£¯à³s±µ¨ìªA°È¾¹.\n½ĞÀË¬dºôµ¸³s±µª¬ºA.\n(¥i¯à¬O250±ş¬r³n¥ó¨¾¤õÀğÔ£ªºªı¤î¤F.)
 m04-001|404 Not Found
@@ -164,9 +164,9 @@ e00-011|¥ª LASER (ÂÅ) ¨S¦³±q¥¿±`¦ì¸m¶}©l.\nÄ~Äò¶Ü?
 e00-012|¥k LASER (¬õ) ¨S¦³±q¥¿±`¦ì¸m¶}©l.\nÄ~Äò¶Ü?
 e00-015|¨S¦³¿é¤Jºq¦±¼ĞÃD.\nÄ~Äò¶Ü?
 e00-016|¼ĞÃD¥i¥H¦b "½s¿è" -> "ÃĞ­±¬ÛÃö³]©w¡]¤@¯ë¡^"¤¤³]©w.
-e00-020|°±¤î«áNote¤£·|«O¦s.\nÄ~Äò¶Ü?
-e00-021|°±¤î«áLASERªº°t¸m¤£·|«O¦s.\nÄ~Äò¶Ü?
-e00-022|°±¤î«áª½¨¤LASERªº°t¸m¤£·|«O¦s.\nÄ~Äò¶Ü?
+e00-020|°±¤î¦ZNote¤£·|«O¦s.\nÄ~Äò¶Ü?
+e00-021|°±¤î¦ZLASERªº°t¸m¤£·|«O¦s.\nÄ~Äò¶Ü?
+e00-022|°±¤î¦Zª½¨¤LASERªº°t¸m¤£·|«O¦s.\nÄ~Äò¶Ü?
 e00-025|ÃĞ­±¤¤¦s¦bµÛ¯S®íªºÃĞ­±°t¸m,«O¦s¥i¯à·|¾É­P³o¨Ç¼Æ¾Ú¥á¥¢.
 e00-026|½T»{
 e00-027|"%0"[%1] ªºÃĞ­±¤w¸g§ïÅÜ.\n%2·Q«O¦s¤å¥ó¶Ü?
@@ -183,7 +183,7 @@ e00-044|Âà´«Ãø«×¬° "
 e00-045|"(
 e00-046|).
 e00-047|Tapestop®ÄªG¤£¯à­«Å|©Î³sÄò©ñ¸m¡C(²Ä%0¤p¸`)
-e00-048|µù·N:\n¾É¥X¨ìREAPER¥u»PÂÂª©¥»­İ®e¡A¦bv1.60ª©¤§«á·s°l¥[ªº®ÄªG±N¤£¯à¥¿±`¾É¥X¡C
+e00-048|ª`·N:\n¾É¥X¨ìREAPER°¦»PÂÂª©¥»­İ®e¡A¦bv1.60ª©¤§¦Z·s°l¥[ªº®ÄªG±N¤£¯à¥¿±`¾É¥X¡C
 e00-050|keyinfo_en.gif
 e00-055|¤p¸`
 e00-056|
@@ -210,9 +210,7 @@ e02-040|¥ª¥kÂ½Âà©Ò¿ïªºnotes(&F)\tCtrl+R
 e02-041|ÀH¾÷©Ò¿ïªºNote(&R)\tCtrl+Shift+R
 e02-042|Copy lane &zooms in selection\tCtrl+Shift+C
 e02-043|Remove lane z&ooms in selection\tShift+Delete
-e02-055|Copy lane tilt effects &in selection
-e02-056|Remove lane tilt effects i&n selection
-e02-045|§R°£¤w¿ï¾Üªº½d³ò(&E)...
+e02-045|§R°£¤w¿ï¾Üªº­S³ò(&E)...
 e02-046|·í«e¦ì¸m´¡¤JªÅ­y(&B)...
 e02-047|Åã¥Ü·í«e¦ì¸m®É¶¡(&V)...
 e02-048|Clear all c&omments
@@ -220,6 +218,8 @@ e02-049|²MªÅÃĞ­±¤º®e(&H)...
 e02-050|ÃĞ­±¬ÛÃö³]©w - ¤@¯ë(&T)...\tCtrl+T
 e02-051|ÃĞ­±¬ÛÃö³]©w - ¸Ô²Ó(&M)...\tCtrl+Shift+T
 e02-052|Use cursor time for "&sample start"
+e02-055|Copy lane tilt effects &in selection
+e02-056|Remove lane tilt effects i&n selection
 e03-000|¬d¬İ(&V)
 e03-010|&Trace
 e03-015|ÁY¤p­y¹D¶¡¶Z(&R)\t-
@@ -274,7 +274,7 @@ e04-051|LASER¹ï¶Hªº°t¸m: ¸Ô²Ó
 e04-052|LASER¹ï¶Hªº°t¸m: «D±`¸Ô²Ó
 e04-055|¨¾¤î16¤À½s¿è®Éª½¨¤LASER³sÄò´¡¤J (±ÀÂË)
 e04-056|¨¾¤î¦bª½¨¤LASER¤¤´¡¤J¤è¦V (±ÀÂË)
-e04-060|´¡¤J¥~ÂXLASER®É??©l¦ì¸m³q±`¬°¼Ğ·Ç¦ì¸m
+e04-060|´¡¤J¥~ÂXLASER®É°_©l¦ì¸m³q±`¬°¼Ğ­ã¦ì¸m
 e05-000|¼½©ñ(&P)
 e05-010|¼½©ñ(&P)/°±¤î(&S)\tSpace
 e05-015|¼½©ñ®É¸òÀH¥ú¼Ğ²¾°Ê(&Y)
@@ -302,9 +302,9 @@ e06-020|Ãö©ó K-Shoot MANIA(&A)...
 e07-000|ÃĞ­±«H®§ ¡]¤@¯ë³]©w¡^
 e07-001|¼ĞÃD:
 e07-002|§@¦±®a:
-e07-003|¯S®Ä§@??:
+e07-003|¯S®Ä§@ªÌ:
 e07-004|±M¿è«Ê­±¸ô®|:
-e07-005|«Ê­±§@??:
+e07-005|«Ê­±§@ªÌ:
 e07-006|Ãø«×:
 e07-007|Level [1-20]:
 e07-008|BPM:
@@ -313,7 +313,7 @@ e07-010|°¾²¾¶q[²@¬í]:
 e07-011|¸ÕÅ¥­µÀW¶}©l©ó[²@¬í]:
 e07-012|¸ÕÅ¥­µÀWªø«×[²@¬í]:
 e07-020|ÃĞ­±»¡©ú:
-e07-025|¹CÀ¸­I´º:
+e07-025|´åÀ¸­I´º:
 e07-026|¨Fºz(desert)
 e07-027|¯ó­ì(grass)
 e07-028|©]±ß(night)
@@ -325,7 +325,7 @@ e07-033|Äåªá(sakura)
 e07-034|ªá¶é(garden)
 e07-035|¬õ¸­(autumn)
 e07-036|³·´º(snow)
-e07-037|m¥«(city)
+e07-037|³£¥«(city)
 e07-038|¤õµK(flame)
 e07-039|ªÅ¶¡(cyber)
 e07-040|¦t©z(space)
@@ -333,7 +333,7 @@ e07-041|®l¨¦(canyon)
 e07-042|¤õ¬P(mars)
 e07-043|Á¡¶³(cloudy)
 e07-044|¤Û·Q(fantasy)
-e07-048|¹CÀ¸«e´º:
+e07-048|´åÀ¸«e´º:
 e07-049|½bÀY(arrow)
 e07-050|·ÏÃú(smoke)
 e07-051|ªi¯¾(wave)
@@ -371,10 +371,10 @@ e08-050|½Õ¾ãTapeStop®ÄªGªº³t«×
 e08-051|³t«× [0-100]:
 e08-052|­×§ïBitCrusher®ÄªGªº±j«×
 e08-053|±j«× [0-64]:
-e08-054|§ïÅÜ0%®ÄªGªº³t«×
+e08-054|§ïÅÜ%0®ÄªGªº³t«×
 e08-055|¶¡¹j(1/*¤p¸`)[1-]:
 e08-056|§ó§ï%0®ÄªGªº­È
-e08-057|¦^õXµ¥¯Å[%]:
+e08-057|¤ÏõX¯Å§O[%]:
 e08-058|­µ°ª [-48 - 48]:
 e08-060|®¶°Ê®ÄªG³]©w
 e08-061|®¶´T[0-](Default:250):
@@ -392,7 +392,7 @@ e08-091|Sound:
 e08-092|None
 e08-093|Volume [%]:
 e09-000|ÃĞ­±«H®§(¸Ô²Ó³]©w)
-e09-003|°ª³t®Éªº°ò·ÇBPM­È[0:¦Û°Ê]:
+e09-003|°ª³t®Éªº°ò­ãBPM­È[0:¦Û°Ê]:
 e09-005|­µ¶q [%]:
 e09-007|´î¤pª½¨¤LASER­µ®Äªº­µ¶q:
 e09-008|Ãö
@@ -401,7 +401,7 @@ e09-010|LASER ­µ®Ä©µ¿ğ[²@¬í]:
 e09-015|Total­È[0:¦Û°Ê,100-:¤â°Ê«ü©w]:
 e09-020|¹Ï¼Ğ¤å¥ó¦W (¤ñ²v2:1,PNG)
 e10-000|   %0ms \t... ÃĞ­±¤W®É¶¡\n+) %1ms \t... °¾²¾¶q\n------------\n   %2ms \t... ­µÀW¤W®É¶¡ (¥Î©ó¸ÕÅ¥­µÀW)
-e10-020|¯uªº­n²MªÅÃĞ­±¶Ü?\n(BPM­È©MÅÜ©ç¤l?m¤£·|³Q²MªÅ)
-e10-040|½Ğ¿ï¾Ü­n§R°£ªº½d³ò¡C
-e10-041|¿ï¾Ü½d³ò¤ºªºª«¥ó±N·|³Q§R°£¡A½T©w¶Ü?
-e10-050|¶i¦æ¹Cª±´ú¸Õ«e½Ğ¥ı¦sÀÉÃĞ­±¤å¥ó¡C
+e10-020|½T»{²MªÅÃĞ­±¶Ü?\n(BPM­È©MÅÜ©ç¤l³£¤£·|³Q²M°£)
+e10-040|½Ğ¿ï¾Ü­n§R°£ªº­S³ò¡C
+e10-041|¿ï¾Ü­S³ò¤ºªº¹ï¶H±N·|³Q§R°£¡A½T©w¶Ü?
+e10-050|¶i¦æ´åª±´ú¸Õ«e½Ğ¥ı«O¦sÃĞ­±¤å¥ó¡C
