--- a/lang/Japanese.txt
+++ b/lang/Japanese.txt
@@ -258,6 +258,7 @@ e04-030|回転エフェクト(&I)\tS
 e04-034|傾きエフェクトの種類(&L)\tR
 e04-035|レーンの拡大(上部)(&Z)\tZ
 e04-036|レーンの拡大(下部)(&M)\tX
+e04-037|レーンの左右移動(&H)\tC
 e04-038|譜面停止(&F)\tF
 e04-040|4分\tCtrl+4
 e04-041|8分\tCtrl+8
