--- a/lang/Korean.txt
+++ b/lang/Korean.txt
@@ -258,6 +258,7 @@ e04-030|회전 이펙트(&I)\tS
 e04-034|기울기 이펙트 종류(&L)\tR
 e04-035|상단 레인 확대(&Z)\tZ
 e04-036|하단 레인 확대(&M)\tX
+e04-037|&Horizontal lane movement\tC
 e04-038|화면 정지(&F)\tF
 e04-040|1/4\tCtrl+4
 e04-041|1/8\tCtrl+8
