--- a/lang/Traditional Chinese.txt
+++ b/lang/Traditional Chinese.txt
@@ -258,6 +258,7 @@ e04-030|回轉特效標記(&I)\tS
 e04-034|底盤傾斜種類(&L)\tR
 e04-035|畫面上部放大率變更(&Z)\tZ
 e04-036|畫面下部放大率變更(&M)\tX
+e04-037|畫面左右移動量變更(&H)\tC
 e04-038|譜面停止標記(&F)\tF
 e04-040|4分\tCtrl+4
 e04-041|8分\tCtrl+8
