--- a/lang/Japanese.txt
+++ b/lang/Japanese.txt
@@ -401,6 +401,7 @@ e09-009|有効
 e09-010|ピーキング・フィルタの遅延[ms]:
 e09-015|TOTAL値[0:自動,100-:手動指定]:
 e09-020|ｼﾞｬﾝﾙｱｲｺﾝ画像ﾌｧｲﾙ(比率2:1,PNG):
+e09-050|KSH譜面ﾌｫｰﾏｯﾄのﾊﾞｰｼﾞｮﾝ(推奨値:%1):
 e10-000|  　 %0ms\t…譜面上での時間\n＋) %1ms\t…曲の音声の先頭タイミング\n――――――――――――――――――――\n  　 %2ms\t…音声ファイル上での時間
 e10-020|本当に譜面内容をクリアしますか?\n(BPM変化・拍子の変化は保持されます)
 e10-040|削除したい領域を範囲選択してください。
