--- a/lang/Korean.txt
+++ b/lang/Korean.txt
@@ -401,6 +401,7 @@ e09-009|활성화
 e09-010|PEAK 필터 지연 재생[ms]:
 e09-015|TOTAL 수치[0:자동,100-:수동 지정]:
 e09-020|장르 아이콘 이미지(비율 2:1,PNG):
+e09-050|KSH format version (권장:%1):
 e10-000| 　 %0ms\t…채보 파일상의 시간\n＋) %1ms\t…악곡 재생 시작 타이밍\n―――――――――――――――――――――――――\n 　 %2ms\t…악곡 파일상의 시간
 e10-020|정말로 모든 채보 데이터를 지우시겠습니까?\n(BPM 변화 및 변박자 데이터는 삭제되지 않습니다)
 e10-040|삭제하실 영역의 범위를 지정해 주십시오.
