--- a/lang/Simplified Chinese.txt
+++ b/lang/Simplified Chinese.txt
@@ -401,6 +401,7 @@ e09-009|开
 e09-010|LASER 音效延迟[毫秒]:
 e09-015|Total值[0:自动,100-:手动指定]:
 e09-020|图标文件名 (比率2:1,PNG)
+e09-050|KSH format version (推荐值:%1):
 e10-000|   %0ms \t... 谱面上时间\n+) %1ms \t... 偏移量\n------------\n   %2ms \t... 音频上时间 (用于试听音频)
 e10-020|确认清空谱面吗?\n(BPM值和变拍子都不会被清除)
 e10-040|请选择要删除的范围。
