--- a/lang/Traditional Chinese.txt
+++ b/lang/Traditional Chinese.txt
@@ -401,6 +401,7 @@ e09-009|開
 e09-010|LASER 音效延遲[毫秒]:
 e09-015|Total值[0:自動,100-:手動指定]:
 e09-020|圖標文件名 (比率2:1,PNG)
+e09-050|KSH format version (推薦值:%1):
 e10-000|   %0ms \t... 譜面上時間\n+) %1ms \t... 偏移量\n------------\n   %2ms \t... 音頻上時間 (用於試聽音頻)
 e10-020|確認清空譜面嗎?\n(BPM值和變拍子都不會被清除)
 e10-040|請選擇要刪除的范圍。
