--- a/lang/Japanese.txt
+++ b/lang/Japanese.txt
@@ -218,6 +218,7 @@ e02-049|譜面内容をクリア(&H)...
 e02-050|譜面に関する設定-全般(&T)...\tCtrl+T
 e02-051|譜面に関する設定-詳細(&M)...\tCtrl+Shift+T
 e02-052|選曲ﾌﾟﾚﾋﾞｭｰ先頭をｶｰｿﾙ位置の時間に設定(&S)
+e02-054|選択中のLASERオブジェクトの色を反転(&W)
 e02-055|選択範囲の傾きエフェクトをコピー(&I)
 e02-056|選択範囲の傾きエフェクトを削除(&N)
 e03-000|表示(&V)
