--- a/lang/Japanese.txt
+++ b/lang/Japanese.txt
@@ -277,6 +277,7 @@ e04-052|LASERオブジェクトの配置:最も詳細
 e04-055|16分挿入時に直角LASERの連続を避ける (推奨)
 e04-056|幅の小さい直角LASERの挿入を避ける (推奨)
 e04-060|はみ出しLASER挿入時に始点位置を通常の標準位置にする
+e04-070|注釈による譜面ファイルの直接編集を有効にする
 e05-000|再生(&P)
 e05-010|再生/停止(&P)\tSpace
 e05-015|シンクロスクロールを有効にする(&Y)
