--- a/lang/Japanese.txt
+++ b/lang/Japanese.txt
@@ -189,6 +189,7 @@ e00-055|
 e00-056|小節目
 e00-060|OK
 e00-061|キャンセル
+e00-070|KSONファイルのエクスポートに失敗しました。
 e01-000|ファイル(&F)
 e01-010|新規作成(&N)\tCtrl+N
 e01-011|開く(&O)...\tCtrl+O
@@ -197,6 +198,7 @@ e01-013|名前を付けて保存(&A)...\tCtrl+Shift+S
 e01-016|エクスポート(&E)
 e01-020|終了(&C)
 e01-030|REAPERプロジェクト書き出し(&E)...\tCtrl+Alt+R
+e01-031|KSON形式で書き出し(実験的)(&K)...
 e02-000|編集(&E)
 e02-010|元に戻す(&U)\tCtrl+Z
 e02-011|やり直し(&R)\tCtrl+Y
