--- a/lang/Japanese.txt
+++ b/lang/Japanese.txt
@@ -61,6 +61,7 @@ m02-051|ms)
 m02-052|[  はい  ]    いいえ 　
 m02-053|   はい     [ いいえ ] 
 m02-055|保存しています...
+m02-060|スクリーンショットをクリップボードにコピーしました。\n投稿画面でCtrl+Vを押すと画像を添付できます。
 m02-070|インプット条件を達成！
 m03-000|ウィンドウモード
 m03-001|フルスクリーン
