--- a/lang/Korean.txt
+++ b/lang/Korean.txt
@@ -61,6 +61,7 @@ m02-051|ms)
 m02-052|[  예  ]    아니오   
 m02-053|   예     [ 아니오 ] 
 m02-055|저장하고 있습니다...
+m02-060|스크린샷이 클립보드에 복사되었습니다.\n게시 창에서 Ctrl+V 키를 눌러 이미지를 첨부하십시오.
 m02-070|해금조건을 달성했습니다!
 m03-000|창 모드
 m03-001|풀 스크린
