--- a/lang/Simplified Chinese.txt
+++ b/lang/Simplified Chinese.txt
@@ -61,6 +61,7 @@ m02-051|ms)
 m02-052|[  是  ]     否   
 m02-053|   是     [  否  ] 
 m02-055|保存中...
+m02-060|屏幕截图已复制到剪贴板.\n请在发布窗口按Ctrl+V来附加图片.
 m02-070|解锁了以下难度!
 m03-000|窗口化
 m03-001|全屏
