--- a/lang/Traditional Chinese.txt
+++ b/lang/Traditional Chinese.txt
@@ -61,6 +61,7 @@ m02-051|ms)
 m02-052|[  是  ]     否   
 m02-053|   是     [  否  ] 
 m02-055|保存中...
+m02-060|屏幕截圖已複製到剪貼板.\n請在發布窗口按Ctrl+V來附加圖片.
 m02-070|解鎖了以下難度!
 m03-000|窗口化
 m03-001|全屏
